@@ -4,7 +4,14 @@
 # Wrapper script for running xapian-progsrv and xapian-tcpsrv from test
 # programs (using libtool and valgrind if required).
 #
-# Copyright (C) 2003,2004,2007,2009 Olly Betts
+# We use this wrapper script so that if valgrind is in use, we can run the
+# remote servers under it, as valgrind's emulation of excess FP precision
+# isn't exact, and otherwise we get tests failing due to these differences.
+#
+# We don't actually need valgrind's checking here, so we use "--tool=none"
+# which is much quicker than using valgrind's default memcheck tool.
+#
+# Copyright (C) 2003,2004,2007,2009,2012 Olly Betts
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License as
