@@ -1,3 +1,7 @@
+Sat May 19 00:27:23 GMT 2012  Olly Betts <olly@survex.com>
+
+	* tests/runsrv.in: Add explanation of why we have this script.
+
 Sat May 19 00:27:10 GMT 2012  Olly Betts <olly@survex.com>
 
 	* tests/runtest.in: Fix comment typo.
